Se ha cambiado la documentacion de swagger a demas del gitignore, y se creo un endpoint para enviar correos electronicos
